--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -1,2 +1,20 @@
 
 @import "node_modules/bootstrap/scss/bootstrap";
+
+body, html {
+  background: #f2f2f2;
+}
+
+div.siteHeader {
+    background: #fafafa;
+    border-bottom: 1px solid #e0e0e0;
+
+    text-align: center;
+
+    h1 {
+      margin: 0;
+      padding: 10px;
+      font-weight: 400;
+      font-family: 'IM Fell DW Pica', serif;
+    }
+}
