--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -6,14 +6,15 @@ body, html {
 }
 
 div.siteHeader {
-    background: #fafafa;
-    border-bottom: 1px solid #e0e0e0;
+    background: #fcfcfc;
+    color: #303030;
+    border-bottom: 1px solid #dbdbdb;
 
     text-align: center;
 
     h1 {
       margin: 0;
-      padding: 10px;
+      padding: 14px 0 10px;
       font-weight: 400;
       font-family: 'IM Fell DW Pica', serif;
     }
