--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -2,15 +2,17 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
 body, html {
-  background: #f2f2f2;
+  background: #e4effc;
 }
 
 div.siteHeader {
-    background: #fcfcfc;
-    color: #303030;
-    border-bottom: 1px solid #dbdbdb;
+    background: #b4cfec;
+    color: #102050;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
-    text-align: center;
+    text-align: right;
+    padding: 0 25px;
 
     h1 {
       margin: 0;
