--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -2,14 +2,14 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
 body, html {
-  background: #e4effc;
+  background: #fcfaf1;
 }
 
 div.siteHeader {
-    background: #b4cfec;
-    color: #102050;
+    background: #fcf4b2;
+    color: #30241a;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(126, 122, 89, 0.3);
 
     text-align: right;
     padding: 0 25px;
