--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -1,4 +1,9 @@
 
+$theme-colors: (
+  "danger": #d03227,
+  "danger-hover": #a01000,
+);
+
 @import "node_modules/bootstrap/scss/bootstrap";
 
 body, html {
@@ -20,4 +25,42 @@ div.siteHeader {
       font-weight: 400;
       font-family: 'IM Fell DW Pica', serif;
     }
+}
+
+.btn {
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
+}
+
+.btn.btn-link.btn-icon {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+
+  > * {
+    text-decoration: none;
+  }
+
+  > i.material-icons,
+  > i.material-icons:hover {
+    font-size: 18px;
+    margin-right: 4px;
+    text-decoration: none;
+  }
+}
+
+.btn.btn-link.btn-icon:hover {
+  &.text-danger > *,
+  > .text-danger {
+    text-shadow: 0px 0px 5px rgba(map-get($theme-colors, "danger-hover"), 0.4);
+  }
+
+  > * {
+    text-decoration: underline;
+  }
+
+  > i.material-icons,
+  > i.material-icons:hover {
+    text-decoration: none;
+  }
 }
