a bit of colors

--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -19,7 +19,7 @@ $theme-colors: (
 .bootstrap-scope.gray-yellow {
   $body-bg: #fcfaf1;
   $theme-colors: (
-    "primary": #cccc22
+    "primary": #24ad00
   );
 
   @import "node_modules/bootstrap/scss/bootstrap";
