--- a/fe/src/site.scss
+++ b/fe/src/site.scss
@@ -1,7 +1,7 @@
 
 
 html, body {
-  background-color: mix(theme-color("primary"), #fcfaf1, 2%);
+  background-color: mix(theme-color("primary"), #fffef9, 2%);
 }
 
 .navbar-site {
@@ -10,12 +10,10 @@ html, body {
 
   color: #30241a;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(126, 122, 89, 0.3);
-
-  padding: 0 25px;
+  border-bottom: 1px solid rgba(theme-color-level("primary", 3), 0.3);
 
   .nav-link {
-    color: theme-color-level("primary", 4);
+    color: theme-color-level("primary", -3);
 
     &.active {
       color: theme-color-level("primary", 7);
